@@ -2,7 +2,10 @@
  * libglide/glide_temp.F90: Created derived type for full temperature
    solution parameters. Began populating this. 
  * Regtested against e2.a and e2.h
-
+ * libglide/glide_temp.F90: began to separate out basal water
+   model. Temporarily added utility module to resolve circular make
+   dependencies. This will need refining. Not regtested yet. 
+	
 2009-10-21 Ian Rutt
  * libglide/glide_temp.F90: More refactoring progress. Preparation for
    variable time-step. Bug fixed: regtest passes (e2.a and e2.h)
